# AAI

./: .gitignore  AAI.cabal  README.md  changelog.md
src/Control/: Command.hs  Router.hs
src/Data/: CanDefault.hs  Defaultable.hs
src/System/Console/CmdArgs/: AAI.hs
src/System/Console/CmdArgs/AAI/: CanMarshall.hs
