name:                   AAI
version:                0.1.0.0
synopsis:               Abstract Application Interface.
-- description:         
license:                MIT
license-file:           LICENSE
author:                 Nils 'bash0r' Jonsson
maintainer:             aka.bash0r@gmail.com
-- copyright:           
category:               Control
build-type:             Simple
-- extra-source-files:  
cabal-version:          >=1.10

library
  exposed-modules:      Control.Command
                 ,      Control.Router
  -- other-modules:       
  -- other-extensions:    
  build-depends:        base >=4.8 && <4.9
  hs-source-dirs:       src
  default-language:     Haskell2010
