name: AAI
version: 0.3.0.1
cabal-version: >=1.10
build-type: Simple
license: MIT
license-file: LICENSE
copyright: (c) 2015-2016 Nils 'bash0r' Jonsson
maintainer: aka.bash0r@gmail.com
synopsis: Abstract Application Interface.
description:
    The Abstract Application Interface is used to define a
    generic interface for handling command line parameter
    to command mapping. It may route a command by giving a
    simple parameter list and a list of supported commands.
category: Control
author: Nils 'bash0r' Jonsson
extra-source-files:
    README.md
    LICENSE
    changelog.md

source-repository head
    type: git
    location: https://github.com/aka-bash0r/AAI

source-repository this
    type: git
    location: https://github.com/aka-bash0r/AAI

library
    exposed-modules:
        Data.Defaultable

        System.Console.CmdArgs.AAI
    build-depends:
        base ==4.8.*
    default-language: Haskell2010
    hs-source-dirs: src
